/develop/node/node-crash-course debranded

--- a/docs/develop/node/node-crash-course/index-node-crash-course.mdx
+++ b/docs/develop/node/node-crash-course/index-node-crash-course.mdx
@@ -12,7 +12,7 @@ import Authors from '@theme/Authors';
 <Authors frontMatter={frontMatter} />
 
 This is a complete online course for Node.js developers wanting to learn about Redis,
-the ioredis client and the Redis modules ecosystem.
+the ioredis client and Redis Stack.
 
 In this course, you'll learn about using Redis with Node.js through a blend of video and
 text-based training. You can also get hands-on with some optional workshop exercises
@@ -81,16 +81,16 @@ where you'll add new functionality to an existing Node.js application.
 
 <div class="col">
   <RedisCard
-    title="8. Introduction to Modules"
-    description="Extending the capabilities of Redis with modules."
+    title="8. Introduction to Redis Stack"
+    description="Extending the capabilities of Redis with Redis Stack."
     page="/develop/node/nodecrashcourse/introductiontomodules"
   />
 </div>
 
    <div class="col">
      <RedisCard
-        title="9. RedisJSON"
-        description="Storing JSON documents in Redis with the RedisJSON module."
+        title="9. Redis JSON"
+        description="Storing JSON documents in Redis."
         page="/develop/node/nodecrashcourse/redisjson"
         />
   </div>
@@ -99,8 +99,8 @@ where you'll add new functionality to an existing Node.js application.
 <div class="row">
  <div class="col">
      <RedisCard
-        title="10. RediSearch"
-        description="Indexing and querying Hashes with RediSearch."
+        title="10. Redis Search and Query"
+        description="Indexing and querying Hashes with Redis as a Search and Query engine."
         page="/develop/node/nodecrashcourse/redisearch"
         />
   </div>
@@ -151,8 +151,8 @@ where you'll add new functionality to an existing Node.js application.
 <div class="row">
  <div class="col">
      <RedisCard
-        title="16. RedisBloom"
-        description="A look at probabilistic data structures with the RedisBloom module."
+        title="16. Redis Probabilistic Data"
+        description="A look at probabilistic data structures in Redis."
         page="/develop/node/nodecrashcourse/redisbloom"
         />
   </div>
