/develop/node/nodecrashcourse/introductiontomodules debranded

--- a/docs/develop/node/node-crash-course/index-node-crash-course.mdx
+++ b/docs/develop/node/node-crash-course/index-node-crash-course.mdx
@@ -81,8 +81,8 @@ where you'll add new functionality to an existing Node.js application.
 
 <div class="col">
   <RedisCard
-    title="8. Introduction to Redis Stack"
-    description="Extending the capabilities of Redis with Redis Stack."
+    title="8. Redis Extensibility"
+    description="Extending the capabilities of Redis."
     page="/develop/node/nodecrashcourse/introductiontomodules"
   />
 </div>
