--- a/docs/howtos/moviesdatabase/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/moviesdatabase/getting-started/index-gettingstarted.mdx
@@ -10,11 +10,10 @@ import Authors from '@theme/Authors';
 
 <Authors frontMatter={frontMatter} />
 
-[RediSearch](https://redisearch.io) is a real-time indexing and search engine.RediSearch provides a simple and fast way to index and query data using any field (secondary index), and do search and aggregation on an indexed dataset.
-In this tutorial you will learn how to install and use the [RediSearch](https://redisearch.io) module that provides an indexing and full text search engine for Redis.
-As a bonus, this tutorial lets you discover the new major release (2.0) and see how to use it, in your application.
+Redis Stack includes a real-time indexing and search engine. Search and Query in Redis provide a simple and fast way to index and query data using any field (secondary index), and do search and aggregation on an indexed dataset.
+In this tutorial you will learn how to use Search and Query which provides an indexing and full text search engine for Redis.
 
-- Install RediSearch 2.0 & Insert Data
+- Install Redis Stack & Insert Data
 - Create Index
 - Query Data
 - Manage Indexes
