--- a/docs/howtos/moviesdatabase/index-moviesdatabase.mdx
+++ b/docs/howtos/moviesdatabase/index-moviesdatabase.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-moviesdatabase
-title: How to list and search Movies Database using Redisearch
+title: How to list and search Movies Database using Redis Stack
 sidebar_label: How to build Movies database using Redis
 slug: /howtos/moviesdatabase
 authors: [ajeet]
