--- a/docs/howtos/redisbloom/index-redisbloom.mdx
+++ b/docs/howtos/redisbloom/index-redisbloom.mdx
@@ -70,11 +70,11 @@ Add the Redis Enterprise cloud database endpoint, port and password.
 
 ![database details](images/database_details.png)
 
-### Step 8. Getting Started with Probabilistic data structures in Redis Stack
+### Step 8. Getting Started with probabilistic data structures in Redis Stack
 
-In the next steps you will use some basic Redis Stack commands. You can run them from the Redis command-line interface (redis-cli) or use the CLI available in RedisInsight. (See part 2 of this tutorial to learn more about using the RedisInsight CLI) To interact with Probabilistic data structures in Redis, you use the `BF.ADD` and `BF.EXISTS` commands.
+In the next steps you will use some basic Redis Stack commands. You can run them from the Redis command-line interface (redis-cli) or use the CLI available in RedisInsight. (See part 2 of this tutorial to learn more about using the RedisInsight CLI) To interact with probabilistic data structures in Redis, you use the `BF.ADD` and `BF.EXISTS` commands.
 
-Let’s go ahead and test drive some Probabilistic data structure-specific operations. We will create a basic dataset based on unique visitors’ IP addresses, and you will see how to:
+Let’s go ahead and test drive some probabilistic data structure-specific operations. We will create a basic dataset based on unique visitors’ IP addresses, and you will see how to:
 
 - Create a Bloom filter
 - Determine whether or not an item exists in the Bloom filter
@@ -144,7 +144,7 @@ In the above example, the first command shows the result as “1” for both the
 
 ### Next Steps
 
-- Learn more about Probabilistic data structures in Redis in the [Quick Start](https://oss.redis.com/redisbloom/Quick_Start/) tutorial.
-- [How to build a Fraud Detection System using Redis Stack and Probabilistic data structures](https://developer.redis.com/howtos/frauddetection/)
+- Learn more about probabilistic data structures in Redis in the [Quick Start](https://oss.redis.com/redisbloom/Quick_Start/) tutorial.
+- [How to build a Fraud Detection System using Redis Stack and probabilistic data structures](https://developer.redis.com/howtos/frauddetection/)
 - [How to Use Redis for Content Filtering](https://redis.com/blog/use-redis-content-filtering/)
-- [Benefits of Probabilistic data structures in Redis](https://redis.com/modules/redis-bloom/)
+- [Benefits of probabilistic data structures in Redis](https://redis.com/modules/redis-bloom/)
