added Real time tutorials in sidebar

--- a/docs/howtos/solutions/real-time-inventory/local-inventory-search/index-rti-local-inventory-search.mdx
+++ b/docs/howtos/solutions/real-time-inventory/local-inventory-search/index-rti-local-inventory-search.mdx
@@ -80,6 +80,10 @@ The demo uses two collections:
 - **Product collection**: Stores product details like `productId`, `name`, `price`, `image`, and other details
   ![product data](./images/product-data.png)
 
+:::tip
+Download <u>[RedisInsight](https://redis.com/redis-enterprise/redis-insight/)</u> to view your Redis data or to play with raw Redis commands in the workbench. learn more about <u>[RedisInsight in tutorials](/explore/redisinsight/)</u>
+:::
+
 - **StoresInventory collection**: Stores product quantity available at different local stores.
 
 For demo purpose, we are using the below regions in New York, US as store locations. Products are mapped to these location stores with a `storeId` and `quantity`.
