--- a/docs/howtos/redisjson/using-redisinsight/index-usingredisinsight.mdx
+++ b/docs/howtos/redisjson/using-redisinsight/index-usingredisinsight.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-usingredisinsight
 title: How to visualize JSON data using RedisInsight
-sidebar_label: RedisJSON using RedisInsight
+sidebar_label: Redis JSON using RedisInsight
 slug: /howtos/redisjson/using-redisinsight
 authors: [ajeet]
 ---
@@ -10,9 +10,9 @@ import Authors from '@theme/Authors';
 
 <Authors frontMatter={frontMatter} />
 
-RedisInsight provides built-in support for the RedisJSON, RediSearch, RedisGraph, Redis Streams, and RedisTimeSeries modules to make it even easier to query, visualize, and interactively manipulate search indexes, graphs, streams, and time-series data. Support for RedisJSON on Redis Cluster was introduced for the first time in RedisInsight v1.8.0. With RedisInsight, you can visualize and edit your JSON data flawlessly.
+RedisInsight provides built-in support for the Redis JSON, Search and Query, Streams, and Time Series features to make it even easier to query, visualize, and interactively manipulate search indexes, streams, and time-series data. Support for JSON on Redis Cluster was introduced for the first time in RedisInsight v1.8.0. With RedisInsight, you can visualize and edit your JSON data flawlessly.
 
-Below steps shows how to get started with RedisJSON using RedisInsight:
+Below steps shows how to get started with Redis JSON using RedisInsight:
 
 ### Step 1. Create a free Cloud account
 
@@ -38,7 +38,7 @@ click "Create a custom database" option shown in the image.
 
 ### Step 3. Verify the database details
 
-You will be provided with Public endpoint URL and "Redis Stack" as the type of database with the list of modules that comes by default.
+You will be provided with Public endpoint URL and "Redis Stack" as the type of database with the list of features that comes by default.
 
 ![verify database](images/details_database.png)
 
@@ -88,9 +88,9 @@ Select "employee_profile" to display the JSON data
 ### References
 
 - [RU204: Storing, Querying and Indexing JSON at Speed](https://university.redis.com/courses/ru204/) - a course at Redis University
-- [RedisJSON and Python](/howtos/redisjson/using-python)
+- [Redis JSON and Python](/howtos/redisjson/using-python)
 - [How to store and retrieve nested JSON document](/howtos/redisjson/storing-complex-json-document)
 - [Importing JSON data into Redis using NodeJS](/howtos/redisjson/using-nodejs)
-- Learn more about [RedisJSON](https://oss.redis.com/redisjson/) in the Quickstart tutorial.
-- [How to build shopping cart app using NodeJS and RedisJSON](/howtos/shoppingcart)
+- Learn more about [Redis JSON](https://oss.redis.com/redisjson/) in the QuickStart tutorial.
+- [How to build shopping cart app using NodeJS and Redis JSON](/howtos/shoppingcart)
 - [Indexing, Querying, and Full-Text Search of JSON Documents with Redis](https://redis.com/blog/index-and-query-json-docs-with-redis/)
